--- a/Week_3_MachineLearning.ipynb
+++ b/Week_3_MachineLearning.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/IAT-ExploringAI-2024/Week3-Machine_Learning/blob/main/Week_3_MachineLearning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/AmelianHearts/Week3-Machine_Learning/blob/Assignment-3/Week_3_MachineLearning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -2448,6 +2448,428 @@
         "\n",
         "As wonderful as Random Forests are, it's clear that we're going to need to pull out bigger guns if we want to get appreciable performance on this dataset, perhaps even with good generalizability on test data. DNNs(Deep Neural Networks) are the next step-up in complexity from classical machine learning models, and we will start at the first rung on that ladder:Simple Perceptron in next lab!"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Assignment 3 code"
+      ],
+      "metadata": {
+        "id": "zLKy3pItAwx4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#importing the required libraries\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import librosa.display\n",
+        "import soundfile\n",
+        "import os\n",
+        "# matplotlib complains about the behaviour of librosa.display, so we'll ignore those warnings:\n",
+        "import warnings; warnings.filterwarnings('ignore')"
+      ],
+      "metadata": {
+        "id": "Qm7M6WIDBPzO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "pycharm": {
+          "name": "#%%\n"
+        },
+        "id": "FF2-LIenBY0N"
+      },
+      "outputs": [],
+      "source": [
+        "def feature_chromagram(waveform, sample_rate):\n",
+        "    # STFT computed here explicitly; mel spectrogram and MFCC functions do this under the hood\n",
+        "    stft_spectrogram=np.abs(librosa.stft(waveform))\n",
+        "    # Produce the chromagram for all STFT frames and get the mean of each column of the resulting matrix to create a feature array\n",
+        "    chromagram=np.mean(librosa.feature.chroma_stft(S=stft_spectrogram, sr=sample_rate).T,axis=0)\n",
+        "    return chromagram\n",
+        "\n",
+        "def feature_melspectrogram(waveform, sample_rate):\n",
+        "    # Produce the mel spectrogram for all STFT frames and get the mean of each column of the resulting matrix to create a feature array\n",
+        "    # Using 8khz as upper frequency bound should be enough for most speech classification tasks\n",
+        "    melspectrogram=np.mean(librosa.feature.melspectrogram(y=waveform, sr=sample_rate, n_mels=128, fmax=8000).T,axis=0)\n",
+        "    return melspectrogram\n",
+        "\n",
+        "def feature_mfcc(waveform, sample_rate):\n",
+        "    # Compute the MFCCs for all STFT frames and get the mean of each column of the resulting matrix to create a feature array\n",
+        "    # 40 filterbanks = 40 coefficients\n",
+        "    mfc_coefficients=np.mean(librosa.feature.mfcc(y=waveform, sr=sample_rate, n_mfcc=40).T, axis=0)\n",
+        "    return mfc_coefficients"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "pycharm": {
+          "name": "#%%\n"
+        },
+        "id": "_B-uFGQDBh4K"
+      },
+      "outputs": [],
+      "source": [
+        "def get_features(file):\n",
+        "    # load an individual soundfile\n",
+        "     with soundfile.SoundFile(file) as audio:\n",
+        "        waveform = audio.read(dtype=\"float32\")\n",
+        "        sample_rate = audio.samplerate\n",
+        "        # compute features of soundfile\n",
+        "        chromagram = feature_chromagram(waveform, sample_rate)\n",
+        "        melspectrogram = feature_melspectrogram(waveform, sample_rate)\n",
+        "        mfc_coefficients = feature_mfcc(waveform, sample_rate)\n",
+        "\n",
+        "        feature_matrix=np.array([])\n",
+        "        # use np.hstack to stack our feature arrays horizontally to create a feature matrix\n",
+        "        feature_matrix = np.hstack((chromagram, melspectrogram, mfc_coefficients))\n",
+        "\n",
+        "        return feature_matrix"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Emotions in the RAVDESS dataset\n",
+        "emotionsR ={\n",
+        "  '01':'neutral',\n",
+        "  '02':'calm',\n",
+        "  '03':'happy',\n",
+        "  '04':'sad',\n",
+        "  '05':'angry',\n",
+        "  '06':'fearful',\n",
+        "  '07':'disgust',\n",
+        "  '08':'surprised'\n",
+        "}\n",
+        "\n",
+        "#Emotions in the EmoDB dataset\n",
+        "emotionsE ={\n",
+        "    'W': 'angry', #anger\n",
+        "    'L': 'boredom',\n",
+        "    'A': 'fearful', #anxiety/fear\n",
+        "    'F': 'happy', #happiness\n",
+        "    'T': 'sad', #sadness\n",
+        "    'E': 'disgust',\n",
+        "    'N': 'neutral'\n",
+        "}\n",
+        "#Common Emotions\n",
+        "emotion_list ={\n",
+        "    'W': 'angry', #anger\n",
+        "    'A': 'fearful', #anxiety/fear\n",
+        "    'F': 'happy', #happiness\n",
+        "    'T': 'sad', #sadness\n",
+        "    'E': 'disgust',\n",
+        "    'N': 'neutral'\n",
+        "}\n",
+        "\n",
+        "genderE = {\n",
+        "    '03': 'male',\n",
+        "    '08': 'female',\n",
+        "    '09': 'female',\n",
+        "    '10':'male',\n",
+        "    '11':'male',\n",
+        "    '12':'male',\n",
+        "    '13': 'female',\n",
+        "    '14': 'female',\n",
+        "    '15':'male',\n",
+        "    '16': 'female'\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "pZs8QJQRB2z7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os, glob\n",
+        "\n",
+        "def load_data():\n",
+        "    X,y,z=[],[],[]\n",
+        "    count = 0\n",
+        "    #EmoDB\n",
+        "\n",
+        "    for file in glob.glob(\"/content/drive/MyDrive/EmoDBRAVDESS/wav/*.wav\"):\n",
+        "        file_name=os.path.basename(file)\n",
+        "\n",
+        "        emotion=emotionsE[(file_name[5])]\n",
+        "        #print(emotion)\n",
+        "        if emotion != 'boredom':\n",
+        "          features = get_features(file)\n",
+        "          gender=genderE[(file_name[:2])]\n",
+        "          X.append(features)\n",
+        "          y.append(emotion)\n",
+        "          z.append(gender)\n",
+        "          count += 1\n",
+        "         # '\\r' + end='' results in printing over same line\n",
+        "          print('\\r' + f' Processed {count}/{535} audio samples from EmoDB',end=' ')\n",
+        "\n",
+        "    count = 0\n",
+        "    #ravdess\n",
+        "    for file in glob.glob(\"/content/drive/MyDrive/EmoDBRAVDESS/audio_speech_actors_01-24/Actor_*/*.wav\"):\n",
+        "        file_name=os.path.basename(file)\n",
+        "\n",
+        "        emotion=emotionsR[(file_name.split(\"-\")[2])]\n",
+        "        #print(emotion)\n",
+        "        if emotion != 'calm':\n",
+        "          if emotion != 'surprised':\n",
+        "            features = get_features(file)\n",
+        "            if int(file_name.split(\"-\")[6][:2])%2 == 0:\n",
+        "              z.append('female')\n",
+        "            else:\n",
+        "              z.append('male')\n",
+        "            X.append(features)\n",
+        "            y.append(emotion)\n",
+        "            count += 1\n",
+        "         # '\\r' + end='' results in printing over same line\n",
+        "            print('\\r' + f' Processed {count}/{1435} audio samples from RAVDESS',end=' ')\n",
+        "\n",
+        "\n",
+        "\n",
+        "      # Return arrays to plug into sklearn's cross-validation algorithms\n",
+        "    return np.array(X), np.array(y), np.array(z)"
+      ],
+      "metadata": {
+        "id": "rAhoHyZwCVXT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "features, emotions, genderSpread = load_data()"
+      ],
+      "metadata": {
+        "id": "P6gapq_VCYs6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f'\\nAudio samples represented: {features.shape[0]}')\n",
+        "print(f'Numerical features extracted per sample: {features.shape[1]}')\n",
+        "features_df = pd.DataFrame(features) # make it pretty for display\n",
+        "features_df"
+      ],
+      "metadata": {
+        "id": "iAxtOqsnCZsD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# plot emotions\n",
+        "plt.figure(figsize=(35,4))\n",
+        "plt.subplot(1,3,1)\n",
+        "#np.unique returns ordered list of unique elements and count of each element\n",
+        "emotion_list, count = np.unique(emotions, return_counts=True)\n",
+        "plt.bar(x=range(6), height=count)\n",
+        "plt.xticks(ticks=range(6), labels = [emotion for emotion in emotion_list],fontsize=10)\n",
+        "plt.xlabel('Emotion')\n",
+        "plt.tick_params(labelsize=16)\n",
+        "plt.ylabel('Number of Samples')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "bPBKr7PIDF7m"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "features.to_excel('/content/drive/MyDrive/featuresRavdess.xlsx')\n",
+        "emotions.to_excel('/content/drive/MyDrive/emotionsRavdess.xlsx')\n"
+      ],
+      "metadata": {
+        "id": "kb1-sccfDWu1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Code to Run When already saved\n"
+      ],
+      "metadata": {
+        "id": "0t4BSsr5Dc73"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "features=pd.read_excel('/content/drive/MyDrive/featuresRavdess.xlsx',index_col=0)\n",
+        "emotions=pd.read_excel('/content/drive/MyDrive/emotionsRavdess.xlsx',index_col=0)"
+      ],
+      "metadata": {
+        "id": "5KHTEgb-DR0G"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "outputId": "e4579adb-159a-4a4f-a1f4-2d49dd528fae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "73h5jFclD9xl"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12 Chromagram features:           min = 0.310,     max = 0.874,     mean = 0.666,     deviation = 0.085\n",
+            "\n",
+            "128 Mel Spectrogram features:     min = 0.000,     max = 149.208,     mean = 0.188,     deviation = 1.600\n",
+            "\n",
+            "40 MFCC features:                 min = -873.242,    max = 115.126,    mean = -14.626,    deviation = 98.494\n"
+          ]
+        }
+      ],
+      "source": [
+        "# We would usually use df.describe(), but it provides a bit of a mess of information we don't need at the moment.\n",
+        "def print_features(df):\n",
+        "    # Check chromagram feature values\n",
+        "    features_df_chromagram = df.loc[:,:11]\n",
+        "    chroma_min = features_df_chromagram.min().min()\n",
+        "    chroma_max = features_df_chromagram.max().max()\n",
+        "    # stack all features into a single series so we don't get a mean of means or stdev of stdevs\n",
+        "    chroma_mean = features_df_chromagram.stack().mean()\n",
+        "    chroma_stdev = features_df_chromagram.stack().std()\n",
+        "    print(f'12 Chromagram features:       \\\n",
+        "    min = {chroma_min:.3f}, \\\n",
+        "    max = {chroma_max:.3f}, \\\n",
+        "    mean = {chroma_mean:.3f}, \\\n",
+        "    deviation = {chroma_stdev:.3f}')\n",
+        "\n",
+        "    # Check mel spectrogram feature values\n",
+        "    features_df_melspectrogram = df.loc[:,12:139]\n",
+        "    mel_min = features_df_melspectrogram.min().min()\n",
+        "    mel_max = features_df_melspectrogram.max().max()\n",
+        "    # stack all features into a single series so we don't get a mean of means or stdev of stdevs\n",
+        "    mel_mean = features_df_melspectrogram.stack().mean()\n",
+        "    mel_stdev = features_df_melspectrogram.stack().std()\n",
+        "    print(f'\\n128 Mel Spectrogram features: \\\n",
+        "    min = {mel_min:.3f}, \\\n",
+        "    max = {mel_max:.3f}, \\\n",
+        "    mean = {mel_mean:.3f}, \\\n",
+        "    deviation = {mel_stdev:.3f}')\n",
+        "\n",
+        "    # Check MFCC feature values\n",
+        "    features_df_mfcc = df.loc[:,140:179]\n",
+        "    mfcc_min = features_df_mfcc.min().min()\n",
+        "    mfcc_max = features_df_mfcc.max().max()\n",
+        "    # stack all features into a single series so we don't get a mean of means or stdev of stdevs\n",
+        "    mfcc_mean = features_df_mfcc.stack().mean()\n",
+        "    mfcc_stdev = features_df_mfcc.stack().std()\n",
+        "    print(f'\\n40 MFCC features:             \\\n",
+        "    min = {mfcc_min:.3f},\\\n",
+        "    max = {mfcc_max:.3f},\\\n",
+        "    mean = {mfcc_mean:.3f},\\\n",
+        "    deviation = {mfcc_stdev:.3f}')\n",
+        "\n",
+        "print_features(features)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "TyOIJnz1EZra"
+      },
+      "outputs": [],
+      "source": [
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "\n",
+        "scaler = StandardScaler()\n",
+        "# keep our unscaled features just in case we need to process them alternatively\n",
+        "features_scaled = features\n",
+        "features_scaled = scaler.fit_transform(features_scaled)\n",
+        "\n",
+        "scaler = MinMaxScaler()\n",
+        "# keep our unscaled features just in case we need to process them alternatively\n",
+        "features_minmax = features\n",
+        "features_minmax = scaler.fit_transform(features_minmax)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('\\033[1m'+'Standard Scaling:\\n'+'\\033[0m')\n",
+        "features_scaled_df = pd.DataFrame(features_scaled)\n",
+        "print_features(features_scaled_df)\n",
+        "\n",
+        "print('\\n\\n\\033[1m'+'MinMax Scaling:\\n'+'\\033[0m')\n",
+        "features_minmax_df = pd.DataFrame(features_minmax)\n",
+        "print_features(features_minmax_df)"
+      ],
+      "metadata": {
+        "id": "MTJ4BJO-EfXZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "\n",
+        "############# Unscaled test/train set #############\n",
+        "X_train, X_test, y_train, y_test =train_test_split(\n",
+        "    features,\n",
+        "    emotions,\n",
+        "    test_size=0.2,\n",
+        "    random_state=69\n",
+        ")\n",
+        "\n",
+        "############ Standard Scaled test/train set ###########\n",
+        "# The labels/classes (y_train, y_test) never change, keep old values\n",
+        "X_train_scaled, X_test_scaled, _, _ = train_test_split(\n",
+        "    features_scaled,\n",
+        "    emotions,\n",
+        "    test_size=0.2,\n",
+        "    random_state=69\n",
+        ")\n",
+        "\n",
+        "############# MinMax Scaled test/train set ###############\n",
+        "# The labels/classes (y_train, y_test) never change, keep old values\n",
+        "X_train_minmax, X_test_minmax, _, _ = train_test_split(\n",
+        "    features_scaled,\n",
+        "    emotions,\n",
+        "    test_size=0.2,\n",
+        "    random_state=69\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "GONYc7i6EtaA"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
