--- a/Week_3_MachineLearning.ipynb
+++ b/Week_3_MachineLearning.ipynb
@@ -2870,6 +2870,47 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
+        "\n",
+        "classification_models = [\n",
+        "    KNeighborsClassifier(),#(3),\n",
+        "    SVC(kernel='linear'),#, C=0.025),\n",
+        "    SVC(kernel='rbf'),\n",
+        "    DecisionTreeClassifier(),#max_depth=5),\n",
+        "    RandomForestClassifier(),#max_depth=5, n_estimators=10, max_features=1),\n",
+        "    AdaBoostClassifier(),\n",
+        "    GaussianNB(),\n",
+        "    QuadraticDiscriminantAnalysis()]\n",
+        "\n",
+        "\n",
+        "#scaled\n",
+        "scores_scaled = []\n",
+        "for model in classification_models:\n",
+        "    model.fit(X_train_scaled, y_train)\n",
+        "    score = model.score(X_test_scaled, y_test)\n",
+        "    model_name = type(model).__name__\n",
+        "    if model_name=='SVC' and model.kernel=='rbf': model_name+=' RBF kernel'\n",
+        "    scores_scaled.append((model_name,(f'{100*score:.2f}%')))\n",
+        "\n",
+        "\n",
+        "# Make it pretty\n",
+        "scores_scaled_df = pd.DataFrame(scores_scaled,columns=['Classifier','Accuracy Score'])\n",
+        "scores_scaled_df.sort_values(by='Accuracy Score',axis=0,ascending=False)"
+      ],
+      "metadata": {
+        "id": "IV1d-FeDIkqx"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
