--- a/Week_3_MachineLearning.ipynb
+++ b/Week_3_MachineLearning.ipynb
@@ -2901,6 +2901,18 @@
         "    if model_name=='SVC' and model.kernel=='rbf': model_name+=' RBF kernel'\n",
         "    scores_scaled.append((model_name,(f'{100*score:.2f}%')))\n",
         "\n",
+        "#unscaled\n",
+        "scores = []\n",
+        "for model in classification_models:\n",
+        "    model.fit(X_train, y_train)\n",
+        "    score = model.score(X_test, y_test)\n",
+        "    model_name = type(model).__name__\n",
+        "    if model_name=='SVC' and model.kernel=='rbf': model_name+=' RBF kernel'\n",
+        "    scores.append((model_name,(f'{100*score:.2f}%')))\n",
+        "\n",
+        "#\n",
+        "\n",
+        "\n",
         "\n",
         "# Make it pretty\n",
         "scores_scaled_df = pd.DataFrame(scores_scaled,columns=['Classifier','Accuracy Score'])\n",
