--- a/Week_3_MachineLearning.ipynb
+++ b/Week_3_MachineLearning.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/IAT-ExploringAI-2024/Week3-Machine_Learning/blob/main/Week_3_MachineLearning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Marky115/Week3-Machine_Learning/blob/newBranch/Week_3_MachineLearning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -21,15 +21,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ywb8NifF9XN3",
-        "outputId": "02574e3b-b411-4a94-d624-1abe3bcb3e45"
+        "outputId": "5858a9f8-f896-4511-dc5a-66f814edcd3f"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -126,7 +126,7 @@
       "metadata": {
         "id": "b2IL0uT19_3A"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -250,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -286,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -300,7 +300,7 @@
         "def load_data():\n",
         "    X,y=[],[]\n",
         "    count = 0\n",
-        "    for file in glob.glob(\"/content/drive/MyDrive/Audio_Speech_Actors_01-24/Actor_*/*.wav\"):\n",
+        "    for file in glob.glob(\"/content/drive/MyDrive/RAVDESS/Audio_Speech_Actors_01-24/Actor_*/*.wav\"):\n",
         "        file_name=os.path.basename(file)\n",
         "        emotion=emotions[file_name.split(\"-\")[2]]\n",
         "        features = get_features(file)\n",
@@ -328,27 +328,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
         },
-        "id": "XeKE591aL9hG",
-        "outputId": "ae181c7d-c0bb-4263-84fc-cf79f71e8169",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "XeKE591aL9hG"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            " Processed 1435/1440 audio samples "
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
+        "import numpy as np\n",
+        "\n",
         "features, emotions = load_data()"
       ]
     },
@@ -1056,7 +1046,11 @@
       "cell_type": "code",
       "source": [
         "features_df.to_excel('/content/drive/MyDrive/featuresRavdess.xlsx')\n",
-        "emotions_df.to_excel('/content/drive/MyDrive/emotionsRavdess.xlsx')\n"
+        "\n",
+        "emotions_df.to_excel('/content/drive/MyDrive/emotionsRavdess.xlsx')\n",
+        "\n",
+        "\n",
+        "features_df.to_excel('/content/drive/MyDrive/EmoDB/Week3')"
       ],
       "metadata": {
         "id": "u6H8hc6gDtbp"
@@ -1090,6 +1084,15 @@
       ],
       "metadata": {
         "id": "-8nlJCESEn56"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "cpPjWJsVRHFZ"
       },
       "execution_count": null,
       "outputs": []
@@ -1822,6 +1825,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "\n",
+        "\n",
         "############# Unscaled test/train set #############\n",
         "X_train, X_test, y_train, y_test =train_test_split(\n",
         "    features,\n",
@@ -1858,6 +1862,17 @@
         "### Comparing Models\n",
         "We'll try each off-the-shelf machine learning model from sklearn and pick a few to explore, since these models will train near instantly on this dataset."
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "features=pd.read_excel('/content/drive/MyDrive/EmoDB/Week3',index_col=0)"
+      ],
+      "metadata": {
+        "id": "rYYQc90RPHDF"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2470,7 +2485,6 @@
     },
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     }
   },
