--- a/Week_3_MachineLearning.ipynb
+++ b/Week_3_MachineLearning.ipynb
@@ -21,15 +21,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ywb8NifF9XN3",
-        "outputId": "5858a9f8-f896-4511-dc5a-66f814edcd3f"
+        "outputId": "f1316ac4-ed15-4f0b-b9f1-bd28075b7a14"
       },
-      "execution_count": 1,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -126,7 +126,7 @@
       "metadata": {
         "id": "b2IL0uT19_3A"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -250,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -286,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -328,7 +328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
