--- a/Week_3_MachineLearning.ipynb
+++ b/Week_3_MachineLearning.ipynb
@@ -286,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -300,7 +300,8 @@
         "def load_data():\n",
         "    X,y=[],[]\n",
         "    count = 0\n",
-        "    for file in glob.glob(\"/content/drive/MyDrive/RAVDESS/Audio_Speech_Actors_01-24/Actor_*/*.wav\"):\n",
+        "\n",
+        "    for file in glob.glob(\"/content/drive/MyDrive/Audio_Speech_Actors_01-24_*/*.wav\"):\n",
         "        file_name=os.path.basename(file)\n",
         "        emotion=emotions[file_name.split(\"-\")[2]]\n",
         "        features = get_features(file)\n",
@@ -328,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -1050,13 +1051,30 @@
         "emotions_df.to_excel('/content/drive/MyDrive/emotionsRavdess.xlsx')\n",
         "\n",
         "\n",
-        "features_df.to_excel('/content/drive/MyDrive/EmoDB/Week3')"
+        "features_df.to_excel('/content/drive/MyDrive/Audio_Speech_Actors_01-24')"
       ],
       "metadata": {
-        "id": "u6H8hc6gDtbp"
+        "id": "u6H8hc6gDtbp",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 245
+        },
+        "outputId": "d1d3f989-dd1a-4b63-ecbb-dd9c264613d4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'features_df' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-11-1ce56b0f28eb>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfeatures_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_excel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/drive/MyDrive/featuresRavdess.xlsx'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0memotions_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_excel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/drive/MyDrive/emotionsRavdess.xlsx'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'features_df' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
