--- a/Week_3_MachineLearning.ipynb
+++ b/Week_3_MachineLearning.ipynb
@@ -2829,10 +2829,10 @@
       ],
       "metadata": {
         "id": "MTJ4BJO-EfXZ",
-        "outputId": "29f9f015-b7cd-43e0-f309-d96fd717f945",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "29f9f015-b7cd-43e0-f309-d96fd717f945"
       },
       "execution_count": 6,
       "outputs": [
@@ -2937,11 +2937,11 @@
       ],
       "metadata": {
         "id": "IV1d-FeDIkqx",
-        "outputId": "8088c591-a5f2-4a04-a647-faed8b656947",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "outputId": "8088c591-a5f2-4a04-a647-faed8b656947"
       },
       "execution_count": 29,
       "outputs": [
@@ -3260,12 +3260,12 @@
         "scores_df.sort_values(by='Accuracy Score',axis=0,ascending=False)"
       ],
       "metadata": {
-        "id": "vunfrqrfpse_",
-        "outputId": "c30dc1e5-664f-4167-c50d-5e6aab1cd93a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "id": "vunfrqrfpse_",
+        "outputId": "c30dc1e5-664f-4167-c50d-5e6aab1cd93a"
       },
       "execution_count": 9,
       "outputs": [
@@ -3585,12 +3585,12 @@
         "\n"
       ],
       "metadata": {
-        "id": "N3MtcWVlpzE3",
-        "outputId": "09bf4253-a742-4a8c-99c4-2bfaa3874cce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "id": "N3MtcWVlpzE3",
+        "outputId": "09bf4253-a742-4a8c-99c4-2bfaa3874cce"
       },
       "execution_count": 30,
       "outputs": [
@@ -3899,7 +3899,7 @@
         "from sklearn.svm import SVC\n",
         "\n",
         "model = SVC(\n",
-        "    C=10,  #higher the value tighter the margin\n",
+        "    C=71,  #higher the value tighter the margin\n",
         "    gamma='auto',\n",
         "    kernel='rbf',\n",
         "    random_state=69\n",
@@ -3924,13 +3924,13 @@
         "print(f'SVC Model\\'s accuracy on test set is {100*model.score(X_test_minmax, y_test):.2f}%')"
       ],
       "metadata": {
-        "id": "3CWet2Gm9Nx8",
-        "outputId": "e9c52172-2020-421e-844c-ed5e1583d344",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3CWet2Gm9Nx8",
+        "outputId": "d234013a-37ae-4445-cc12-8de39cb499ea"
       },
-      "execution_count": 23,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -3941,12 +3941,12 @@
             "SVC Model's accuracy on test set is 43.05%\n",
             "\n",
             "scaled\n",
-            "SVC Model's accuracy on training set is 87.48%\n",
-            "SVC Model's accuracy on test set is 61.26%\n",
+            "SVC Model's accuracy on training set is 98.09%\n",
+            "SVC Model's accuracy on test set is 71.19%\n",
             "\n",
             "minmax\n",
-            "SVC Model's accuracy on training set is 87.48%\n",
-            "SVC Model's accuracy on test set is 61.26%\n"
+            "SVC Model's accuracy on training set is 98.09%\n",
+            "SVC Model's accuracy on test set is 71.19%\n"
           ]
         }
       ]
@@ -3961,71 +3961,80 @@
         ")\n",
         "\n",
         "model.fit(X_train, y_train)\n",
-        "\n",
+        "print(f\"unscaled\")\n",
         "print(f'Default kNN Model\\'s accuracy on training set is {100*model.score(X_train, y_train):.2f}%')\n",
         "print(f'Default kNN Model\\'s accuracy on test set is {100*model.score(X_test, y_test):.2f}%\\n')\n",
         "\n",
         "model.fit(X_train_scaled, y_train)\n",
-        "\n",
+        "print(f\"scaled\")\n",
         "print(f'Default kNN Model\\'s accuracy on training set is {100*model.score(X_train_scaled, y_train):.2f}%')\n",
         "print(f'Default kNN Model\\'s accuracy on test set is {100*model.score(X_test_scaled, y_test):.2f}%\\n')\n",
         "\n",
         "model.fit(X_train_minmax, y_train)\n",
-        "\n",
+        "print(f\"minmax\")\n",
         "print(f'Default kNN Model\\'s accuracy on training set is {100*model.score(X_train_minmax, y_train):.2f}%')\n",
         "print(f'Default kNN Model\\'s accuracy on test set is {100*model.score(X_test_minmax, y_test):.2f}%\\n')\n",
         "\n",
         "##### (hastily) tuned kNN ######\n",
         "model = KNeighborsClassifier(\n",
-        "    n_neighbors = 5,\n",
+        "    n_neighbors = 2,\n",
         "    weights = 'distance',\n",
         "    algorithm = 'brute',\n",
         "    n_jobs=4\n",
         ")\n",
         "\n",
         "model.fit(X_train, y_train)\n",
-        "\n",
+        "print(f\"unscaled\")\n",
         "print(f'kNN Model\\'s accuracy on training set is {100*model.score(X_train, y_train):.2f}%')\n",
         "print(f'kNN Model\\'s accuracy on test set is {100*model.score(X_test, y_test):.2f}%\\n')\n",
         "\n",
         "model.fit(X_train_scaled, y_train)\n",
-        "\n",
+        "print(f\"scaled\")\n",
         "print(f'kNN Model\\'s accuracy on training set is {100*model.score(X_train_scaled, y_train):.2f}%')\n",
         "print(f'kNN Model\\'s accuracy on test set is {100*model.score(X_test_scaled, y_test):.2f}%\\n')\n",
         "\n",
         "model.fit(X_train_minmax, y_train)\n",
-        "\n",
+        "print(f\"minmax\")\n",
         "print(f'kNN Model\\'s accuracy on training set is {100*model.score(X_train_minmax, y_train):.2f}%')\n",
         "print(f'kNN Model\\'s accuracy on test set is {100*model.score(X_test_minmax, y_test):.2f}%\\n')"
       ],
       "metadata": {
-        "id": "faBodJWT_TQo",
-        "outputId": "e41e0207-452f-462c-b118-fbffedcd9048",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "faBodJWT_TQo",
+        "outputId": "0f2679ed-2ecd-43de-8667-d08c6cb5872d"
       },
-      "execution_count": 31,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "unscaled\n",
             "Default kNN Model's accuracy on training set is 71.14%\n",
             "Default kNN Model's accuracy on test set is 53.97%\n",
             "\n",
+            "scaled\n",
             "Default kNN Model's accuracy on training set is 77.03%\n",
             "Default kNN Model's accuracy on test set is 54.97%\n",
             "\n",
+            "minmax\n",
             "Default kNN Model's accuracy on training set is 77.03%\n",
             "Default kNN Model's accuracy on test set is 54.97%\n",
             "\n",
+            "unscaled\n",
             "kNN Model's accuracy on training set is 100.00%\n",
-            "kNN Model's accuracy on test set is 57.62%\n",
+            "kNN Model's accuracy on test set is 59.60%\n",
+            "\n",
+            "scaled\n",
             "kNN Model's accuracy on training set is 100.00%\n",
-            "kNN Model's accuracy on test set is 58.61%\n",
+            "kNN Model's accuracy on test set is 66.23%\n",
+            "\n",
+            "minmax\n",
             "kNN Model's accuracy on training set is 100.00%\n",
-            "kNN Model's accuracy on test set is 58.61%\n"
+            "kNN Model's accuracy on test set is 66.23%\n",
+            "\n"
           ]
         }
       ]
@@ -4041,23 +4050,23 @@
         ")\n",
         "\n",
         "model.fit(X_train, y_train)\n",
-        "\n",
+        "print(f\"unscaled\")\n",
         "print(f'Default Random Forest Model\\'s accuracy on training set is {100*model.score(X_train, y_train):.2f}%')\n",
         "print(f'Default Random Forest Model\\'s accuracy on test set is {100*model.score(X_test, y_test):.2f}%\\n')\n",
         "\n",
         "model.fit(X_train_scaled, y_train)\n",
-        "\n",
+        "print(f\"scaled\")\n",
         "print(f'Default Random Forest Model\\'s accuracy on training set is {100*model.score(X_train_scaled, y_train):.2f}%')\n",
         "print(f'Default Random Forest Model\\'s accuracy on test set is {100*model.score(X_test_scaled, y_test):.2f}%\\n')\n",
         "\n",
         "model.fit(X_train_minmax, y_train)\n",
-        "\n",
+        "print(f\"minmax\")\n",
         "print(f'Default Random Forest Model\\'s accuracy on training set is {100*model.score(X_train_minmax, y_train):.2f}%')\n",
         "print(f'Default Random Forest Model\\'s accuracy on test set is {100*model.score(X_test_minmax, y_test):.2f}%\\n')\n",
         "\n",
         "########## Tuned Random Forest #######\n",
         "model = RandomForestClassifier(\n",
-        "    n_estimators = 500,\n",
+        "    n_estimators = 237,\n",
         "    criterion ='entropy',\n",
         "    warm_start = True,\n",
         "    max_features = 'sqrt',\n",
@@ -4066,48 +4075,57 @@
         ")\n",
         "\n",
         "model.fit(X_train, y_train)\n",
-        "\n",
+        "print(f\"unscaled\")\n",
         "print(f'Random Forest Model\\'s accuracy on training set is {100*model.score(X_train, y_train):.2f}%')\n",
         "print(f'Random Forest Model\\'s accuracy on test set is {100*model.score(X_test, y_test):.2f}%\\n')\n",
         "\n",
         "model.fit(X_train_scaled, y_train)\n",
-        "\n",
+        "print(f\"scaled\")\n",
         "print(f'Random Forest Model\\'s accuracy on training set is {100*model.score(X_train_scaled, y_train):.2f}%')\n",
         "print(f'Random Forest Model\\'s accuracy on test set is {100*model.score(X_test_scaled, y_test):.2f}%\\n')\n",
         "\n",
         "model.fit(X_train_minmax, y_train)\n",
-        "\n",
+        "print(f\"minmax\")\n",
         "print(f'Random Forest Model\\'s accuracy on training set is {100*model.score(X_train_minmax, y_train):.2f}%')\n",
         "print(f'Random Forest Model\\'s accuracy on test set is {100*model.score(X_test_minmax, y_test):.2f}%\\n')"
       ],
       "metadata": {
-        "id": "TfM5xAAbCJYA",
-        "outputId": "1102ef5b-73d3-4527-ff1a-e36c8369ce6c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TfM5xAAbCJYA",
+        "outputId": "39096731-d44a-4bb7-fadd-5c3d0cd8eaa5"
       },
-      "execution_count": 32,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "unscaled\n",
             "Default Random Forest Model's accuracy on training set is 100.00%\n",
             "Default Random Forest Model's accuracy on test set is 62.91%\n",
             "\n",
+            "scaled\n",
             "Default Random Forest Model's accuracy on training set is 100.00%\n",
             "Default Random Forest Model's accuracy on test set is 62.25%\n",
             "\n",
+            "minmax\n",
             "Default Random Forest Model's accuracy on training set is 100.00%\n",
             "Default Random Forest Model's accuracy on test set is 62.25%\n",
             "\n",
+            "unscaled\n",
             "Random Forest Model's accuracy on training set is 100.00%\n",
-            "Random Forest Model's accuracy on test set is 62.91%\n",
-            "Random Forest Model's accuracy on training set is 23.30%\n",
-            "Random Forest Model's accuracy on test set is 19.87%\n",
-            "Random Forest Model's accuracy on training set is 23.30%\n",
-            "Random Forest Model's accuracy on test set is 19.87%\n"
+            "Random Forest Model's accuracy on test set is 63.25%\n",
+            "\n",
+            "scaled\n",
+            "Random Forest Model's accuracy on training set is 22.97%\n",
+            "Random Forest Model's accuracy on test set is 21.19%\n",
+            "\n",
+            "minmax\n",
+            "Random Forest Model's accuracy on training set is 22.97%\n",
+            "Random Forest Model's accuracy on test set is 21.19%\n",
+            "\n"
           ]
         }
       ]
